ipad spacing issues

--- a/_sass/4-pages/_nav.sass
+++ b/_sass/4-pages/_nav.sass
@@ -45,7 +45,7 @@
 
   #nav-title
     color: #000
-    margin: 20px 20px 10px
+    margin: 20px 20px 5px
 
   #nav-title li
     color: #000
@@ -61,7 +61,7 @@
     font-size: 1.3em
     list-style: none
     color: #000
-    margin: 10px 0 0
+    margin: 40px 0 0
     padding: 0 0 0 25px
     line-height: 1.7
     padding-bottom: 15px
